--- a/ce419a/public/templates/student_add.html
+++ b/ce419a/public/templates/student_add.html
@@ -4,9 +4,9 @@
 <body>
 <h1>Add Student</h1>
 
-<form method="get">
+<form method="post">
     {% csrf_token %}
-    <input type="text" name="q" placeholder="search..." />
+    {{ form.as_p }}
     <button type="submit">Submit</button>
 </form>
 </body>
